@@ -47,13 +47,14 @@ namespace MEDDLY {
 #include "operations/arith_plus.h"
 #include "operations/arith_minus.h"
 #include "operations/arith_mult.h"
+#include "operations/arith_div.h"
 
 #include "operations/cross.h"
 // #include "operations/maxmin.h"
 // #include "operations/plus.h"
 // #include "operations/minus.h"
 // #include "operations/multiply.h"
-#include "operations/divide.h"
+// #include "operations/divide.h"
 #include "operations/modulo.h"
 #include "operations/prepostplus.h"
 #include "operations/prepostimage.h"
